<resources>
    <string name="app_name">Hapros</string>


    <string name="launch1_details"><font color="#FF1A5DAC"><b>Capsule Name:</b></font> \"HAPROS I\"\n<font color="#FF1A5DAC"><b>Launch Date:</b></font> June 4, 2016\n<font color="#FF1A5DAC"><b>Launched From:</b></font> Wendover, UT\n<font color="#FF1A5DAC"><b>Altitude Reached:</b></font> Unknown\n<font color="#FF1A5DAC"><b>Recovery Status:</b></font> Not Recovered\n<font color="#FF1A5DAC"><b>Recovery Location:</b></font> Projected to be in the vicinity of Pilot Peak, NV, but never found.\n<font color="#FF1A5DAC"><b>About:</b></font> This launch was prepared for by putting the mascot, Larry the Lemur, through free fall training.</string>
    <string name="launch2_details"><font color="#FF0065B8"><b>Capsule Name:</b></font> \"HAPROS II\"\n<font color="#FF0065B8"><b>Launch Date:</b></font> May 31, 2017\n<font color="#FF0065B8"><b>Launched From:</b></font> Dugway, UT\n<font color="#FF0065B8"><b>Altitude Reached:</b></font> Unknown\n<font color="#FF0065B8"><b>Recovery Status:</b></font> Not Recovered\n<font color="#FF0065B8"><b>Recovery Location:</b></font> Landed in restricted military property in the Cedar Mountains. Could not be subsequently recovered.\n<font color="#FF0065B8"><b>About:</b></font> First year to use Lux the penguin as the mascot, which was used each subsequent year.</string>
    <string name="launch3_details"><font color="#FF0066B9"><b>Capsule Name:</b></font> \"HAPROS III\"\n<font color="#FF0066B9"><b>Launch Date:</b></font> May 19, 2018\n<font color="#FF0066B9"><b>Launched From:</b></font> Corrine, UT\n<font color="#FF0066B9"><b>Altitude Reached:</b></font> 112,000 feet\n<font color="#FF0066B9"><b>Recovery Status:</b></font> Recovered\n<font color="#FF0066B9"><b>Recovery Location:</b></font> Bear River City\n<font color="#FF0066B9"><b>About:</b></font> A picture from this launch placed third in the Utah State Fair photography contest.</string>
    <string name="launch4_details"><font color="#848484"><b>Capsule Name:</b></font> \"Douglas M. Burr\"\n<font color="#848484"><b>Launch Date:</b></font> May 11, 2019\n<font color="#848484"><b>Launched From:</b></font> Cherry Creek, ID\n<font color="#848484"><b>Altitude Reached:</b></font> 115,000 feet\n<font color="#848484"><b>Recovery Status:</b></font> Recovered\n<font color="#848484"><b>Recovery Location:</b></font> Backyard field in Garland, UT\n<font color="#848484"><b>About:</b></font> HAPROS IV\'s capsule was shaped after NASA\'s Apollo capsules to celebrate 50 years from the moon landing.</string>
    <string name="launch5_details"><font color="#FF1274B9"><b>Capsule Name:</b></font> \"Off-Nominal\"\n<font color="#FF1274B9"><b>Launch Date:</b></font> May 18, 2021\n<font color="#FF1274B9"><b>Launched From:</b></font> Corrine, UT\n<font color="#FF1274B9"><b>Altitude Reached:</b></font> 100,000 feet\n<font color="#FF1274B9"><b>Recovery Status:</b></font> Recovered\n<font color="#FF1274B9"><b>Recovery Location:</b></font> Lower fairing at the base of Little Mountain. Upper fairing recovered in Honeyville\n<font color="#FF1274B9"><b>About:</b></font> HAPROS V\'s capsule was an approximate scale replica of SpaceX\'s Crew Dragon.</string>
    <string name="launch6_details"><font color="#FF429CE4"><b>Capsule Name:</b></font> \"HAPROS VI\"\n<font color="#FF429CE4"><b>Launch Date:</b></font> May 18, 2021\n<font color="#FF429CE4"><b>Launched From:</b></font> Grantsville Reservoir, UT\n<font color="#FF429CE4"><b>Altitude Reached:</b></font> 101,000\n<font color="#FF429CE4"><b>Recovery Status:</b></font> Recovered\n<font color="#FF429CE4"><b>Recovery Location:</b></font> Recovered in downtown Salt Lake.\n<font color="#FF429CE4"><b>About:</b></font> HAPROS VI was launched twice—after a launch went wrong in Skull Valley, another launch was attempted weeks later in Granstville.</string>
    <string name="launch7_details"><font color="#FF0066B3"><b>Capsule Name:</b></font> \"PLS DON\'T SHOOT\"\n<font color="#FF0066B3"><b>Launch Date:</b></font> May 13, 2021\n<font color="#FF0066B3"><b>Launched From:</b></font> Stockton, UT\n<font color="#FF0066B3"><b>Altitude Reached:</b></font> TBD\n<font color="#FF0066B3"><b>Recovery Status:</b></font> TBD\n<font color="#FF0066B3"><b>Recovery Location:</b></font> TBD\n<font color="#FF0066B3"><b>About:</b></font> HAPROS VII\'s capsule was designed after the Artemis capsules.</string>
    <!-- TODO add new launch details as well as themes for new years here -->

    <string name="launch1_title"><font face='sans-serif-black' size='40' color="#FFB61443"><b>HAPROS I</b></font></string>
    <string name="launch2_title"><font face='sans-serif-black' size='40' color="#FFED293D"><b>HAPROS II</b></font></string>
    <string name="launch3_title"><font face='sans-serif-black' size='40' color="#FFFB0101"><b>HAPROS III</b></font></string>
    <string name="launch4_title"><font face='sans-serif-black' size='40' color="#100E27"><b>HAPROS IV</b></font></string>
    <string name="launch5_title"><font face='sans-serif-black' size='40' color="#FFFE0303"><b>HAPROS V</b></font></string>
    <string name="launch6_title"><font face='sans-serif-black' size='40' color="#FFE7553A"><b>HAPROS VI</b></font></string>
    <string name="launch7_title"><font face='sans-serif-black' size='40' color="#FFF10000"><b>HAPROS VII</b></font></string>
<!--<string name="launch8_title"><font face='sans-serif-black' size='40' color="(primary text theme here)"><b>HAPROS VII</b></font></string>-->
    <!-- TODO add title styling and text for new years here here -->


    <string name="app_developers">App Developers</string>>
    <string name="launch_team">Launch Team</string>>
    <string name="engineering_team">Engineering Team</string>>
    <string name="instructors">Instructors</string>>

    <string name="app_developers_names">Seth Squires\nLogan Lenoir\nRylan Swenson\nGavin Murdock\nBen Michaelis</string>>

    <string name="what_is_hapros">The High Altitude Pi Reaching Outer Stratosphere (HAPROS) mission is a project by Mr. Thomsen\'s Linux class at Tooele County School District\'s Community Learning Center\n\n
        <font size="18">The Goal:</font>\n
    The goal of this project is to send a payload to near space, and track it using a very small computer called a Raspberry Pi running a lean but powerful operating system called Linux.</string>

    <string name="launch_team_names">Joe Griffith - Telemetry, Payload, Imagery\n
    Ella - Telemetry, Imagery\n
    Hannah - Telemetry, Payload\n
    Braden - Telemetry, Satellite\n
    Lukas - Telemetry, Satellite\n
    Luke - Telemetry, Payload\n
    Brian - Telemetry, Imagery\n
    Beau - Payload, Imagery, Media\n
    Jax - Payload\n
    Andrew - Satellite\n
    Marcus - Imagery, Media\n
    Mason - Imagery, Media</string>>


    <string name="engineering_team_names"><font size="18">HAPROS Lab Communications</font>\n
        James Hooper\n
    Portor Sweat\n
    Kade Nieves\n
        <font size="18">HAPROS Lab Sensors</font>\n
    Jacob May\n
    Braydon Tervort\n
        <font size="18">Power and Camera</font>\n
    Sara Arthur\n
    Marisa Peraza\n
    Mason Price\n
    Ian Small\n
    Bryson Eyre</string>

    <string name="instructors_names">Eric Thomsen - Linux instructor\n
    Eric Broadbent - App Development instructor</string>>

    <string name="contact_info">You can contact Mr. Thomsen at: cthomsen@tooeleschools.org</string>


</resources>