<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/artemis_blue"
    tools:context=".About_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollViewAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:text="What is HAPROS?"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/what_is_hapros"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <VideoView
                   android:id="@+id/videoView2"
                   android:layout_width="match_parent"
                   android:layout_height="218dp"
                   android:focusedByDefault="true"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/what_is_hapros2"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/what_is_hapros3"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:text="@string/instructors"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/instructors_names"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:text="@string/engineering_team"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/engineering_team_names"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:text="@string/launch_team"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/launch_team_names"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/app_developers"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/app_developers_names"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="Contact Information"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/contact_info"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="218dp"
                    android:focusedByDefault="false"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>